// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskCancelModalComposition /> Form submissions should successfully call the passed in onSubmit when all validations pass 1`] = `
Object {
  "reason": "reason",
}
`;

exports[`<TaskCancelModalComposition /> should render a notification 1`] = `
<styled.div>
  <Styled(styled.h3)>
    Cancel task
  </Styled(styled.h3)>
  <form
    onSubmit={[Function]}
  >
    <styled.div
      data-bdd="TaskCancel-error"
    >
      <NotificationPanel
        description="There has been an error processing this request. If the issue persists, contact your IT team"
        hideCloseButton={true}
        icon="warning"
        onCloseNotification={[Function]}
        show={true}
      />
    </styled.div>
    <Styled(styled.div)>
      <Input
        data-bdd="TaskCancel-reason"
        data-state-key="reason"
        disabled={false}
        error={null}
        extendStyle={null}
        hasError={false}
        id="reason"
        isFullWidth={true}
        labelText="Reason"
        onChange={[Function]}
        required={true}
        showLabel={true}
        value=""
      />
    </Styled(styled.div)>
    <styled.div>
      <WithTheme(Button)
        buttonType="secondary"
        data-bdd="TaskCancel-cancel"
        isFullWidth={true}
        onClick={[Function]}
        type="button"
      >
        Don't Cancel
      </WithTheme(Button)>
      <WithTheme(Button)
        data-bdd="TaskCancel-submit"
        isFullWidth={true}
        onClick={[Function]}
      >
        Cancel task
      </WithTheme(Button)>
    </styled.div>
  </form>
</styled.div>
`;

exports[`<TaskCancelModalComposition /> should render the page 1`] = `
<styled.div>
  <Styled(styled.h3)>
    Cancel task
  </Styled(styled.h3)>
  <form
    onSubmit={[Function]}
  >
    <Styled(styled.div)>
      <Input
        data-bdd="TaskCancel-reason"
        data-state-key="reason"
        disabled={false}
        error={null}
        extendStyle={null}
        hasError={false}
        id="reason"
        isFullWidth={true}
        labelText="Reason"
        onChange={[Function]}
        required={true}
        showLabel={true}
        value=""
      />
    </Styled(styled.div)>
    <styled.div>
      <WithTheme(Button)
        buttonType="secondary"
        data-bdd="TaskCancel-cancel"
        isFullWidth={true}
        onClick={[Function]}
        type="button"
      >
        Don't Cancel
      </WithTheme(Button)>
      <WithTheme(Button)
        data-bdd="TaskCancel-submit"
        isFullWidth={true}
        onClick={[Function]}
      >
        Cancel task
      </WithTheme(Button)>
    </styled.div>
  </form>
</styled.div>
`;

exports[`<TaskCancelModalComposition /> should render the page when loading 1`] = `
<styled.div>
  <Styled(styled.h3)>
    Cancel task
  </Styled(styled.h3)>
  <form
    onSubmit={[Function]}
  >
    <Styled(styled.div)>
      <Input
        data-bdd="TaskCancel-reason"
        data-state-key="reason"
        disabled={false}
        error={null}
        extendStyle={null}
        hasError={false}
        id="reason"
        isFullWidth={true}
        labelText="Reason"
        onChange={[Function]}
        required={true}
        showLabel={true}
        value=""
      />
    </Styled(styled.div)>
    <styled.div>
      <WithTheme(Button)
        buttonType="secondary"
        data-bdd="TaskCancel-cancel"
        isFullWidth={true}
        onClick={[Function]}
        type="button"
      >
        Don't Cancel
      </WithTheme(Button)>
      <WithTheme(Button)
        data-bdd="TaskCancel-submit"
        isFullWidth={true}
        onClick={[Function]}
      >
        Cancel task
      </WithTheme(Button)>
    </styled.div>
  </form>
</styled.div>
`;
